add reviews and fix wsj

--- a/popup.html
+++ b/popup.html
@@ -38,18 +38,22 @@
           Alex Eylar / Will Shortz
         </div>
         <div class="buttons">
-          <div class="btn preview" hidden>
-            Preview -- not implemented
-          </div>
           <div class="btn download">
             Download
           </div>
         </div>
       </div>
     </div>
+    <div class="review--wrapper">
+      <div>
+        <span class="review--rating">Rating: 3.5</span>
+        <span class="review--rating--votes">(40 votes)</span>
+      </div>
+    </div>
     <script src="fetch.js"></script>
     <script src="puz.js"></script>
     <script src="LZString.js"></script>
+    <script src="loaders/cfiend.js"></script>
     <script src="loaders/wsj.js"></script>
     <script src="loaders/nytimes.js"></script>
     <script src="loaders/usatoday.js"></script>
