fix reviews, fix rebus

--- a/popup.html
+++ b/popup.html
@@ -46,6 +46,7 @@
     </div>
     <div class="review--wrapper">
       <div>
+        <a target="_blank" class="review--link"></a>
         <span class="review--rating">Rating: 3.5</span>
         <span class="review--rating--votes">(40 votes)</span>
       </div>
