add settings, sourcelist, refactor sourceSelect

--- a/popup.html
+++ b/popup.html
@@ -51,14 +51,34 @@
         <span class="review--rating--votes">(40 votes)</span>
       </div>
     </div>
-    <script src="fetch.js"></script>
-    <script src="puz.js"></script>
-    <script src="LZString.js"></script>
-    <script src="loaders/cfiend.js"></script>
-    <script src="loaders/wsj.js"></script>
-    <script src="loaders/nytimes.js"></script>
-    <script src="loaders/usatoday.js"></script>
-    <script src="loaders/latimes.js"></script>
-    <script src="download.js"></script>
-    <script src="popup.js"></script>
+    <div class="settings--modal">
+      <div class="settings--title">
+        Settings
+      </div>
+      <div class="settings--modal--main">
+        <div class="settings--pane sourcelist">
+          <div class="sourcelist--title">
+            Sources
+          </div>
+          <div class="sourcelist--sources">
+          </div>
+        </div>
+        <div class="settings--pane lol">
+        </div>
+      </div>
+    </div>
+    <div class="settings--button">
+      &#9881;
+    </div>
+  </div>
+  <script src="fetch.js"></script>
+  <script src="puz.js"></script>
+  <script src="LZString.js"></script>
+  <script src="loaders/cfiend.js"></script>
+  <script src="loaders/wsj.js"></script>
+  <script src="loaders/nytimes.js"></script>
+  <script src="loaders/usatoday.js"></script>
+  <script src="loaders/latimes.js"></script>
+  <script src="download.js"></script>
+  <script src="popup.js"></script>
 </body>
