refactor out latimes/parseCC

--- a/popup.html
+++ b/popup.html
@@ -70,7 +70,7 @@
   <script src="fetch.js"></script>
   <script src="puz.js"></script>
   <script src="LZString.js"></script>
-  <script src="loaders/cfiend.js"></script>
+  <script src="loaders/shared.js"></script>
   <script src="loaders/jz.js"></script>
   <script src="loaders/wsj.js"></script>
   <script src="loaders/nytimes.js"></script>
