--- a/popup.html
+++ b/popup.html
@@ -73,6 +73,7 @@
   <script src="loaders/shared.js"></script>
   <script src="loaders/jz.js"></script>
   <script src="loaders/wsj.js"></script>
+  <script src="loaders/arkadiummini.js"></script>
   <script src="loaders/nytimes.js"></script>
   <script src="loaders/usatoday.js"></script>
   <script src="loaders/latimes.js"></script>
