--- a/popup.html
+++ b/popup.html
@@ -74,6 +74,7 @@
   <script src="loaders/jz.js"></script>
   <script src="loaders/wsj.js"></script>
   <script src="loaders/arkadiummini.js"></script>
+  <script src="loaders/beq.js"></script>
   <script src="loaders/nytimes.js"></script>
   <script src="loaders/usatoday.js"></script>
   <script src="loaders/latimes.js"></script>
