--- a/popup.html
+++ b/popup.html
@@ -72,6 +72,7 @@
   <script src="LZString.js"></script>
   <script src="loaders/shared.js"></script>
   <script src="loaders/jz.js"></script>
+  <script src="loaders/che.js"></script>
   <script src="loaders/wsj.js"></script>
   <script src="loaders/arkadiummini.js"></script>
   <script src="loaders/beq.js"></script>
