--- a/src/popup.html
+++ b/src/popup.html
@@ -74,6 +74,7 @@
   <script src="loaders/beq.js"></script>
   <script src="loaders/nytimes.js"></script>
   <script src="loaders/usatoday.js"></script>
+  <script src="loaders/tny.js"></script>
   <script src="loaders/latimes.js"></script>
   <script src="download.js"></script>
   <script src="popup.js"></script>
