Support Guardian Quick crosswords

--- a/src/popup.html
+++ b/src/popup.html
@@ -76,6 +76,7 @@
   <script src="loaders/usatoday.js"></script>
   <script src="loaders/tny.js"></script>
   <script src="loaders/latimes.js"></script>
+  <script src="loaders/guardian.js"></script>
   <script src="download.js"></script>
   <script src="popup.js"></script>
 </body>
